--- a/src/main/resources/templates/template_venta.html
+++ b/src/main/resources/templates/template_venta.html
@@ -126,6 +126,8 @@
                 <thead>
                     <tr>
                         <th style="border:1px solid #000;">ARTÍCULO</th>
+                        <th style="border:1px solid #000;">PRECIO U.</th>
+                        <th style="border:1px solid #000;">DESC.</th>
                         <th style="border:1px solid #000;">CANTIDAD</th>
                         <th style="border:1px solid #000; text-align:right;">PRECIO</th>
                     </tr>
@@ -135,7 +137,7 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="2"></td>
+                        <td colspan="4"></td>
                         <td style="border-top:1px solid #000; text-align:right;"><strong>{{total}}</strong></td>
                     </tr>
                 </tfoot>
